--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -29,6 +29,7 @@
   justify-content: center;
   flex-wrap: wrap;
   list-style-type: none;
+  padding: 0;
 }
 
 .recipes__iframe {
